--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,7 +1,8 @@
-@import url('http://fonts.cdnfonts.com/css/billabong');
+/* @import url('http://fonts.cdnfonts.com/css/billabong'); */
+@import url('https://fonts.googleapis.com/css2?family=Kenia&family=Pacifico&display=swap');
 #logo {
-  font-family: 'Billabong', sans-serif;
-  font-size: 38px;
+  font-family:'Pacifico', "cursive";
+  font-size: 52px;
 }
 
 .twinsies {
